# aaargs

./: README.md  pyproject.toml
.github/workflows/: pytest.yaml
aaargs/: __init__.py
tests/: test_aaargs.py
